--- a/.env
+++ b/.env
@@ -2,27 +2,27 @@ NODE_ENV='production'
 ACCESS_TOKEN_COOKIE_NAME=edx-jwt-cookie-header-payload
 BASE_URL=https://app.finlearn.ro
 CREDENTIALS_BASE_URL=null
-CSRF_TOKEN_API_PATH=/csrf/api/v1/token
-ECOMMERCE_BASE_URL=https://ecommerce.app.finlearn.ro
-LANGUAGE_PREFERENCE_COOKIE_NAME=openedx-language-preference
-LMS_BASE_URL=https://app.finlearn.ro
-LOGIN_URL=https://app.finlearn.ro/login
-LOGOUT_URL=https://app.finlearn.ro/logout
-LOGO_URL=null
-LOGO_TRADEMARK_URL=null
-LOGO_WHITE_URL=null
-FAVICON_URL=null
+CSRF_TOKEN_API_PATH='/csrf/api/v1/token'
+ECOMMERCE_BASE_URL='https://ecommerce.app.finlearn.ro'
+LANGUAGE_PREFERENCE_COOKIE_NAME='openedx-language-preference'
+LMS_BASE_URL='https://app.finlearn.ro'
+LOGIN_URL='https://app.finlearn.ro/login'
+LOGOUT_URL='https://app.finlearn.ro/logout'
+LOGO_URL=https://edx-cdn.org/v3/default/logo.svg
+LOGO_TRADEMARK_URL=https://edx-cdn.org/v3/default/logo-trademark.svg
+LOGO_WHITE_URL=https://edx-cdn.org/v3/default/logo-white.svg
+FAVICON_URL=https://edx-cdn.org/v3/default/favicon.ico
 MARKETING_SITE_BASE_URL=https://finlearn.ro
 NEW_RELIC_ADMIN_KEY=null
 NEW_RELIC_APP_ID=null
 NEW_RELIC_LICENSE_KEY=null
 ORDER_HISTORY_URL=null
 REFRESH_ACCESS_TOKEN_ENDPOINT=https://app.finlearn.ro/login_refresh
-SEGMENT_KEY=null
+SEGMENT_KEY='VMsX2obE9Xveo4se3c6CmfdG0LZVc7qI'
 SITE_NAME=Finlearn
 USER_INFO_COOKIE_NAME='edx-user-info'
 CURRENCY_COOKIE_NAME='edx-price-l10n'
-SUPPORT_URL=null
+SUPPORT_URL=https://finlearn.ro
 CYBERSOURCE_URL=null
 APPLE_PAY_MERCHANT_NAME=null
 APPLE_PAY_COUNTRY_CODE=null
